--- a/Service.WebShots/App.config
+++ b/Service.WebShots/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="NumOfInstances" value="3" />
+    <add key="ListeningUrl" value="http://local.ocr.hlidacstatu.cz:9090"/>
+    <add key="ChromeBinaryFullPath" value=""/>
   </appSettings>
   
     <startup> 
