Async OCR fix without Elastic partial update
Elastic partial updates can kill Elastic. Changed to whole record update and independent queue.

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -471,6 +471,10 @@
     <Compile Include="Data\Insolvence\InsolvenceDetail.cs" />
     <Compile Include="Data\Insolvence\Osoba.cs" />
     <Compile Include="Data\Insolvence\Rizeni.cs" />
+    <Compile Include="Data\ItemToOcrQueue.cs">
+      <DependentUpon>Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\ItemToOcrQueue.Partial.cs" />
     <Compile Include="Data\Review.Partial.cs" />
     <Compile Include="Data\Audit.Partial.cs" />
     <Compile Include="Data\Logs\ILogs.cs" />
