--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1278,6 +1278,7 @@
     <Content Include="Views\Home\Adresar_Child.cshtml" />
     <Content Include="Views\Home\Porovnat_Child.cshtml" />
     <Content Include="Views\Insolvence\_Status.cshtml" />
+    <Content Include="Views\Data\DetailText.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
