--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Cache\Manager.cs" />
     <Compile Include="Cache\MemoryCacheManager.cs" />
+    <Compile Include="InfinitiveTask.cs" />
     <Compile Include="ISocialInfo.cs" />
     <Compile Include="InfoFact.cs" />
     <Compile Include="IOTools.cs" />
