Dataset web editor and simple manager
Dataset web editor and simple web manager
some refactoring
Preparation for dataset wizard for "normal people"

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -440,6 +440,7 @@
     <Compile Include="Data\Bookmark.Partial.cs" />
     <Compile Include="Data\External\DataSets\ApiResonseStatus.cs" />
     <Compile Include="Data\External\DataSets\DataSearchResult.cs" />
+    <Compile Include="Data\External\DataSets\DataSet.Api.cs" />
     <Compile Include="Data\External\DataSets\DataSet.cs" />
     <Compile Include="Data\External\DataSets\DataSetDb.cs" />
     <Compile Include="Data\External\DataSets\DataSetException.cs" />
