--- a/Util.WebShot/packages.config
+++ b/Util.WebShot/packages.config
@@ -1,29 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AsyncChromeDriver" version="0.5.3" targetFramework="net472" />
-  <package id="AsyncWebDriver" version="1.4.1" targetFramework="net472" />
+  <package id="AsyncChromeDriver" version="0.5.4" targetFramework="net472" />
+  <package id="AsyncWebDriver" version="1.4.2" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.3.35" targetFramework="net472" />
   <package id="Devmasters.Imaging" version="1.472.1.1" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.9.1" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.4" targetFramework="net472" />
   <package id="IAsyncWebBrowserClient" version="0.2.1" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="PuppeteerSharp" version="1.12.0" targetFramework="net472" />
+  <package id="PuppeteerSharp.AspNetFramework" version="1.12.0" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Security" version="4.3.2" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
   <package id="Zu.ChromeDevToolsClient" version="0.5.2" targetFramework="net472" />
