--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap.less" version="3.4.0" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net472" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
+  <package id="CsvHelper" version="12.1.2" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.3.35" targetFramework="net472" />
   <package id="Devmasters.Core.cs" version="1.472.2.31" targetFramework="net472" />
@@ -87,6 +88,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net472" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
