Dataset WIzard alpha
+ fixed JSchema type in elastic

--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -439,6 +439,7 @@
     </Compile>
     <Compile Include="Data\Bookmark.Partial.cs" />
     <Compile Include="Data\External\DataSets\ApiResonseStatus.cs" />
+    <Compile Include="Data\External\DataSets\RuntimeClassBuilder.cs" />
     <Compile Include="Data\External\DataSets\DataSearchResult.cs" />
     <Compile Include="Data\External\DataSets\DataSet.Api.cs" />
     <Compile Include="Data\External\DataSets\DataSet.cs" />
