--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -13,6 +13,7 @@
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="HlidacStatu.Api.Dataset.Connector" version="1.2.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.9.1" targetFramework="net472" />
   <package id="IPNetwork2" version="2.1.2" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
