CSV import improvement

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -67,6 +67,8 @@
                              PublicKeyToken=b03f5f7f11d50a3a"
                  maxQueryStringLength="80000"
                  maxUrlLength="82000"
+                 maxRequestLength="30000" 
+                 executionTimeout="300"
                  requestValidationMode="2.0"
                  />
     <globalization uiCulture="cs" culture="cs-CZ"/>
@@ -85,7 +87,7 @@
   <system.webServer>
     <security>
       <requestFiltering>
-        <requestLimits maxUrl="82000" maxQueryString="80000" />
+        <requestLimits maxUrl="82000" maxQueryString="80000" maxAllowedContentLength="30000000" />
       </requestFiltering>
     </security>
     <httpProtocol>
