--- a/Lib.Data.External/packages.config
+++ b/Lib.Data.External/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.8.1" targetFramework="net472" />
+  <package id="Autofac" version="4.9.2" targetFramework="net472" />
   <package id="CsvHelper" version="12.1.2" targetFramework="net472" />
   <package id="Devmasters.Cache" version="1.472.4.4" targetFramework="net472" />
   <package id="Devmasters.Core" version="1.472.3.35" targetFramework="net472" />
@@ -10,10 +10,10 @@
   <package id="Devmasters.Net" version="1.472.3.24" targetFramework="net472" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="6.4.0" targetFramework="net472" />
-  <package id="EMGU.CV" version="3.4.3.3016" targetFramework="net472" />
+  <package id="EMGU.CV" version="4.0.1.3373" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Enums.NET" version="2.3.2" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.9.1" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.4" targetFramework="net472" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
@@ -21,19 +21,20 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MimeSharp" version="1.0.0" targetFramework="net472" />
   <package id="NEST" version="6.4.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.10" targetFramework="net472" />
-  <package id="Nito.AsyncEx.Context" version="1.1.0" targetFramework="net472" />
-  <package id="Nito.AsyncEx.Tasks" version="1.1.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net472" />
   <package id="Nito.Disposables" version="2.0.0" targetFramework="net472" />
   <package id="NitoAsyncEx.Context.StrongName" version="1.1.0" targetFramework="net472" />
-  <package id="ObjectsComparer" version="1.2.1" targetFramework="net472" />
+  <package id="ObjectsComparer" version="1.3.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
-  <package id="Scriban" version="1.2.9" targetFramework="net472" />
-  <package id="Select.HtmlToPdf" version="18.4.0" targetFramework="net472" />
+  <package id="Scriban" version="2.0.1" targetFramework="net472" />
+  <package id="Select.HtmlToPdf" version="19.1.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
@@ -53,8 +54,9 @@
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
@@ -65,6 +67,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
