--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -323,6 +323,12 @@
           <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
         </dependentAssembly>
 
+        <dependentAssembly>
+          <assemblyIdentity name="System.Net.IPNetwork" publicKeyToken="717343cc2c25edcf" culture="neutral" />
+          <bindingRedirect oldVersion="0.0.0.0-2.1.2.0" newVersion="2.1.2.0" />
+        </dependentAssembly>
+
+        
       </assemblyBinding>
 
     </runtime>
