jsonschema in datasetTemplatePreview

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -92,7 +92,7 @@
     </security>
     <httpProtocol>
      <customHeaders>
-       <add name="Access-Control-Allow-Origin" value="https://platforma.hlidacstatu.cz" />
+       <add name="Access-Control-Allow-Origin" value="*" />
      </customHeaders>
    </httpProtocol>
     <handlers>
