IP address Blacklist

--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -373,6 +373,7 @@
     <Compile Include="Framework\InsolvenceLimitedView.cs" />
     <Compile Include="Framework\RemoteUrlWebCacheManager.cs" />
     <Compile Include="Framework\Html2Png.cs" />
+    <Compile Include="Framework\RobotFromIP.cs" />
     <Compile Include="Framework\Shared\Data.cs" />
     <Compile Include="Framework\LimitedAccess.cs" />
     <Compile Include="Framework\Visit.cs" />
@@ -1325,7 +1326,7 @@
     <Content Include="Views\Sponzori\Top.cshtml" />
     <Content Include="Views\Weby\_Info.cshtml" />
     <Content Include="Views\Insolvence\PristupOmezen.cshtml" />
-    <Content Include="Views\Account\Bot.cshtml" />
+    <Content Include="Views\Shared\Bot.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
