--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -621,12 +621,13 @@
     <Compile Include="Enhancers\IEnhancer.cs" />
     <Compile Include="Enhancers\Util.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="ES\Highlighter.cs" />
-    <Compile Include="ES\InsolvenceSearchResult.cs" />
+    <Compile Include="Search\Highlighter.cs" />
+    <Compile Include="Search\InsolvenceSearchResult.cs" />
     <Compile Include="ES\Manager.cs" />
-    <Compile Include="ES\SearchData.cs" />
-    <Compile Include="ES\VerejnaZakazkaSearchResult.cs" />
-    <Compile Include="ES\SmlouvaSearchResult.cs" />
+    <Compile Include="Search\SearchDataResult.cs" />
+    <Compile Include="Search\Tools.cs" />
+    <Compile Include="Search\VerejnaZakazkaSearchResult.cs" />
+    <Compile Include="Search\SmlouvaSearchResult.cs" />
     <Compile Include="ES\SearchTools.cs" />
     <Compile Include="Flags.cs" />
     <Compile Include="Init.cs" />
