Renaming + header changes
datova sada -> databaze
pocty v hlavicce

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -27,7 +27,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PageTimerDefaultThreshold" value="1000"/>
 
-    </appSettings>
+    <add key="ZabbixIgnoreDataIntervals"
+  value="~2019-08-11T20:10:00~2019-08-11T23:53:00~Zabbix reinstall | ~2019-08-11T23:58:00~2019-08-12T10:59:00~enabled IP6 "/>
+
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
