Insolvence HP render

--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -52,8 +52,8 @@
     <Reference Include="Devmasters.Cache, Version=1.472.4.4, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devmasters.Cache.1.472.4.4\lib\net40\Devmasters.Cache.dll</HintPath>
     </Reference>
-    <Reference Include="Devmasters.Core, Version=1.472.3.35, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Devmasters.Core.1.472.3.35\lib\net40\Devmasters.Core.dll</HintPath>
+    <Reference Include="Devmasters.Core, Version=1.472.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Devmasters.Core.1.472.4\lib\net40\Devmasters.Core.dll</HintPath>
     </Reference>
     <Reference Include="Devmasters.Net, Version=1.472.3.24, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Devmasters.Net.1.472.3.24\lib\Net45\Devmasters.Net.dll</HintPath>
@@ -115,7 +115,7 @@
     <Compile Include="PluralWords.cs" />
     <Compile Include="ProcessExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Date.cs" />
+    <Compile Include="UtilDateConverter.cs" />
     <Compile Include="SingletonManager.cs" />
     <Compile Include="XPath.cs" />
     <Compile Include="XPath.Tools.cs" />
